--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,9 @@
         </head>
         <body>
             <div id="container">
-                <div id="post">
+                <div id="cabecera">
+                    Cabecera
+                </div>                <div id="post">
             <h1>Este es el título atractivo e interesante del post.</h1>
             <p>Y éste es el párrafo de inicio donde vamos a explicar las cosas incleíbles
                 que se pueden hacer con ramas.</p>
