--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,10 @@
         <body>
             <div id="container">
                 <div id="cabecera">
-                    Cabecera
-                </div>                <div id="post">
+                    Hyperblog
+                    <span id="tagline">Tu blog de confianza</span>
+                </div>                
+                <div id="post">
             <h1>Este es el título atractivo e interesante del post.</h1>
             <p>Y éste es el párrafo de inicio donde vamos a explicar las cosas incleíbles
                 que se pueden hacer con ramas.</p>
