--- a/blogpost.html
+++ b/blogpost.html
@@ -12,8 +12,8 @@
                 </div>                
                 <div id="post">
             <h1>Este es el título atractivo e interesante del post.</h1>
-            <p>Y éste es el párrafo de inicio donde vamos a explicar las cosas incleíbles
-                que se pueden hacer con ramas.</p>
+            <p>Este es el párrafo de inicio donde vamos a explicar las cosas incleíbles
+                que se pueden hacer con las ramas.</p>
 
             <p>
                 Los blogs son la mejor forma de compartir información y tus
